--- a/templates/base.html
+++ b/templates/base.html
@@ -27,11 +27,11 @@
 
     {% block corejs %}
     <script src="https://kit.fontawesome.com/fa9ed30322.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     {% endblock %}
 
     {% block extra_js %}
@@ -191,8 +191,20 @@
     </footer>
 
     {% block postloadjs %}
-    <script>
-        $(".toast").show();
+    <script type="text/javascript">
+        $(document).ready(function(){  
+           // $('.toast').show()
+            let toastElList = [].slice.call(document.querySelectorAll('.toast'))
+            let toastList = toastElList.map(function (toastEl) {
+                let option = {
+                    animation: true,
+                    autohide: true,
+                    delay: 5000,
+                }
+            let bsToast = new bootstrap.Toast(toastEl, option)
+            bsToast.show();
+            });
+        });
     </script>
     {% endblock %}
 </body>
