Added style to datepicker

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -485,6 +485,10 @@ font-family: 'Oxygen', sans-seri  - paragraphs */
     z-index: 999999999999;
 }
 
+.toast-header {
+    width: 100%;
+}
+
 .toast-success {
     background-color: #039b2b;
     color: #fafafa;
@@ -504,7 +508,38 @@ font-family: 'Oxygen', sans-seri  - paragraphs */
     background-color: #da8925;
     color: #fafafa;
 }
-    
+
+/****************Date Picker*/
+
+.ui-state-highlight, 
+.ui-widget-content .ui-state-highlight, 
+.ui-widget-header .ui-state-highlight {
+    border: 1px solid #000000 !important;
+    background: #da8925 !important;
+    color: #000000 !important;
+}
+
+.ui-datepicker-header {
+    border: 1px solid #fafafa !important;
+    background: #000000 !important;
+    color: #fafafa !important;
+    font-weight: bold;
+}
+
+.ui-datepicker-header a {
+    background-color: #fafafa;
+}
+
+.ui-state-active,
+.ui-widget-content .ui-state-active,
+.ui-widget-header .ui-state-active,
+a.ui-button:active, .ui-button:active, 
+.ui-button.ui-state-active:hover {
+    border: 1px solid #000000 !important;
+    background: #2576da !important;
+}
+
+
 /**********************Footer*/
 
 footer {
