--- a/templates/base.html
+++ b/templates/base.html
@@ -141,60 +141,15 @@
     {% block content %}
     {% endblock %}
 
-    
-
-    <footer class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <ul class="w-auto mx-auto footer-links">
-                    <li>
-                        <a class="nav-link text-white" href="#">About</a>
-                    </li>
-                    <li class="text-white">
-                        Follow Us
-                    </li>
-                    <li>
-                        <a class="nav-link text-white" href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <ul class="social-icons">
-                    <li>
-                        <a href="https://www.facebook.com/" target="_blank" rel="noreferrer">
-                            <i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noreferrer">
-                            <i class="fab fa-instagram" aria-hidden="true"></i><span
-                                class="sr-only">Instagram</span></a>
-                    </li>
-                    <li>
-                        <a href="https://www.pinterest.co.uk/" target="_blank" rel="noreferrer">
-                            <i class="fab fa-pinterest" aria-hidden="true"></i><span class="sr-only">Pintrest</span></a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/" target="_blank" rel="noreferrer">
-                            <i class="fab fa-twitter" aria-hidden="true"></i><span class="sr-only">Twitter</span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <!--Copy Rights-->
-        <div class="row">
-            <div class="col text-center copy-rights">
-                <span class="copy-rights-text">&copy; Discover Malta 2021</span>
-            </div>
-        </div>
-    </footer>
+    <!--Footer-->
+    {% include 'includes/footer.html' %}
 
     {% block postloadjs %}
     
     <script type="text/javascript" src="{% static '/js/datepicker.js' %}"></script>
+
     <script type="text/javascript">
-        
+            //Initiates the toasts and hides the contentent within 5 seconds
             let toastElList = [].slice.call(document.querySelectorAll('.toast'))
             let toastList = toastElList.map(function (toastEl) {
                 let option = {
