--- a/static/css/base.css
+++ b/static/css/base.css
@@ -30,10 +30,6 @@ h6 {
     font-family: 'Acme', sans-serif;
 }
 
-section {
-    height: 50vh;
-    margin-top: 7rem;
-}
 
 
 /*************************Navigation*/
@@ -247,6 +243,7 @@ a:active,
 }
 
 .main-content {
+    margin-top: 5rem;
     margin-bottom: 5rem;
     height: fit-content;
     flex: 1 0 auto;
@@ -380,7 +377,7 @@ a:active,
 .btn-book {
     position: fixed;
     top: 20%;
-    left: 80%;
+    left: 90%;
     width: 10rem;
     height: 5rem;
     padding: 1.1rem;
@@ -640,13 +637,13 @@ footer {
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
     .container {
         max-width: 90%;
     }
 }
 
-@media (min-width: 320px) {
+@media (max-width: 320px) {
     .nav-link {
         padding: 0px;
     }
@@ -677,6 +674,24 @@ footer {
         width: auto;
     }
 
+    .btn-book {
+        height: 3rem;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        margin-top: 1rem;
+        font-size: 1.5rem;
+        width: 10rem;
+        left: 50% !important;
+        top: 13% !important;
+    
+    }
+
+    .btn-favourite {
+        top: 14% !important;
+        left: 3px;
+        height: 3rem;
+    }
+
 }
 
 @media (max-width: 420px) {
@@ -690,6 +705,16 @@ footer {
         width: 100%;
         margin-left: 0px;
         margin-right: 0px
+    }
+
+    .btn-book {
+        top: 22%;
+        left: 78%;
+    }
+
+    .btn-favourite {
+        top: 21.5%;
+        margin-left: 0px;
     }
     
 }
