--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -29,169 +29,135 @@
     <div class="row">
         <div class="col">
             {% if bag_items %}
-            <!--Preview-->
-            <!-- <div class="d-block d-md-none">
-                <div class="row">
-                    <div class="col">
-
-                    </div>
+            {% for item in bag_items %}
+            <div class="row">
+                <div class="col-lg-5 col-md-12">
+                    <h4>Trip Info</h4>
                 </div>
-                <div class="row">
-                    <div class="col">
-
-                        <p class="text-muted mb-5">A summary of your bag contents is below</p>
-                    </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <img class="img-fluid" src="{{ item.trip.images.url }}" alt="{{ item.trip.name }}">
                 </div>
-
-                <div class="row">
-                    <div class="col-12 col-sm-6 mb-2">
-
-                    </div>
-                    <div class="col-12 col-sm-6 mb-2">
-
-                    </div>
-                    <div class="col-12 col-sm-6 order-sm-last">
-                        <p class="my-0">Price Each: </p>
-                        <p><strong>Subtotal: </strong></p>
-                    </div>
-                    <div class="col-12 col-sm-6">
-
-                    </div>
+                <div class="col-lg-2 col-md-6">
+                    <p><strong>{{ item.trip.name }}</strong></p>
+                    <p><i class="fas fa-hourglass-end fa-lg"></i><strong> Duration: </strong>
+                        {{ item.trip.duration }}hrs</p>
+                    <p><i class="far fa-clock fa-lg"></i> <strong>Start Time: </strong>
+                        {{ item.trip.start_time }}</p>
+                    <p><i class="fas fa-map-marked-alt fa-lg"></i> <strong> Departure Location: </strong>
+                        {{ item.trip.departure_location }}</p>
+                    <p><i class="fas fa-star fa-lg"></i> 5/5 </p>
+                    {% if trip.family_friendly %}
+                    <p><i class="fas fa-child fa-lg"></i> <strong>Friendly Friendly</strong></p>
+                    {% endif %}
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <hr>
+                <div class="col-lg-2 col-md-4">
+                    <h4>Tickets</h4>
+                    <p class="my-0">{{ item.adult_tickets }} <strong>Adults</strong></p>
+                    <!--check if there are any children tickets-->
+                    {% if item.trip.family_friendly %}
+                    <p class="my-0 mt-2">{{ item.children_tickets }} <strong>Children</strong></p>
+                    {% endif %}
+                    <p class="my-0">{{ item.total_tickets }} <strong>Total Tickets</strong></p>
                     </div>
+                <div class="col-lg-1 col-md-4">
+                    <h4>Price</h4>
+                    <p class="my-0"><i class="fas fa-euro-sign"></i> {{ item.adult_price }} <strong>Adults</strong></p>
+                    <!--check if there are any children tickets-->
+                    {% if item.trip.family_friendly %}
+                    <p class="my-0 mt-2"><i class="fas fa-euro-sign"></i> {{ item.child_price }} <strong>Children</strong></p>
+                    {% endif %}
                 </div>
-            </div> -->
-            <!--table heading-->
-            <div class="table-responsive rounded d-none d-md-block">
-                <table class="table table-sm table-borderless">
-                    <!--table heading-->
-                    <thead class="text-black">
-                        <tr>
-                            <th scope="col">Trip Info</th>
-                            <th scope="col"></th>
-                            <th scope="col">Tickets</th>
-                            <th scope="col">Quantity and Booking Date</th>
-                            <th scope="col">Price</th>
-                        </tr>
-                    </thead>
-                    {% for item in bag_items %}
-                    <tr>
-                        <!--Product image-->
-                        <td class="p-3 w-25">
-                            <img class="img-fluid" src="{{ item.trip.images.url }}" alt="{{ item.trip.name }}">
-                        </td>
-                        <td class="py-3">
-                            <p><strong>{{ item.trip.name }}</strong></p>
-                            <p><i class="fas fa-hourglass-end fa-lg"></i><strong> Duration: </strong>
-                                {{ item.trip.duration }}hrs</p>
-                            <p><i class="far fa-clock fa-lg"></i> <strong>Start Time: </strong>
-                                {{ item.trip.start_time }}</p>
-                            <p><i class="fas fa-map-marked-alt fa-lg"></i> <strong> Departure Location: </strong>
-                                {{ item.trip.departure_location }}</p>
-                            <p><i class="fas fa-star fa-lg"></i> 5/5 </p>
-                            {% if trip.family_friendly %}
-                            <p><i class="fas fa-child fa-lg"></i> <strong>Friendly Friendly</strong></p>
-                            {% endif %}
-                        </td>
-                        <!--Ticket Quantity-->
-                        <td class="py-3">
-                            <p class="my-0">{{ item.adult_tickets }} <strong>Adults</strong></p>
-                            <!--check if there are any children tickets-->
-                            {% if item.trip.family_friendly %}
-                            <p class="my-0 mt-2">{{ item.children_tickets }} <strong>Children</strong></p>
-                            {% endif %}
-                            <p class="my-0">{{ item.total_tickets }} <strong>Total Tickets</strong></p>
-                        </td>
-                        <!--Update quantity form-->
-                        <td class="py-3 w-15">
-                            <form class="form update-form" action="{% url 'update_bag' item.trip.id %}" method="POST">
-                                {% csrf_token %}
-                                <!--Adult Quantity-->
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrease-quantity btn btn-sm"
-                                                data-item_id="{{ item.trip_id }}" id="decrement-qty_{{ item.trip_id }}">
-                                                <span>
-                                                    <i class="fas fa-minus fa-sm"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control form-control-sm qty_input" type="number"
-                                            name="adult_tickets" value="{{ item.adult_tickets }}"
-                                            data-item_id="{{ item.trip_id }}" id="id_qty_{{ item.trip_id }}">
-                                        <div class="input-group-append">
-                                            <button class="add-quantity btn btn-sm" data-item_id="{{ item.trip_id }}"
-                                                id="increment-qty_{{ item.trip_id }}">
-                                                <span>
-                                                    <i class="fas fa-plus fa-sm"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
+                <div class="col-lg-3 col-md-4">
+                    <h4>Quantity</h4>
+                    <form class="form update-form" action="{% url 'update_bag' item.trip.id %}" method="POST">
+                        {% csrf_token %}
+                        <!--Adult Quantity-->
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <button class="decrease-quantity btn btn-sm"
+                                        data-item_id="{{ item.trip_id }}" id="decrement-qty_{{ item.trip_id }}">
+                                        <span>
+                                            <i class="fas fa-minus fa-sm"></i>
+                                        </span>
+                                    </button>
                                 </div>
-                                <!--Child Quantity-->
-                                {% if item.trip.family_friendly %}
-                                <div class="form-group mt-1">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrease-quantity-child btn btn-sm"
-                                                data-item_id="{{ item.trip_id }}" id="decrement-qty_{{ item.trip_id }}">
-                                                <span>
-                                                    <i class="fas fa-minus fa-sm"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control form-control-sm qty_input" type="number"
-                                            name="children_tickets" value="{{ item.children_tickets }}"
-                                            data-item_id="{{ item.trip_id }}" id="id_qty_{{ item.trip_id }}"
-                                            class="child-input">
-                                        <div class="input-group-append">
-                                            <button class="add-quantity btn btn-sm" data-item_id="{{ item.trip_id }}"
-                                                id="increment-qty_{{ item.trip_id }}">
-                                                <span>
-                                                    <i class="fas fa-plus fa-sm"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
+                                <input class="form-control form-control-sm qty_input" type="number"
+                                    name="adult_tickets" value="{{ item.adult_tickets }}"
+                                    data-item_id="{{ item.trip_id }}" id="id_qty_{{ item.trip_id }}">
+                                <div class="input-group-append">
+                                    <button class="add-quantity btn btn-sm" data-item_id="{{ item.trip_id }}"
+                                        id="increment-qty_{{ item.trip_id }}">
+                                        <span>
+                                            <i class="fas fa-plus fa-sm"></i>
+                                        </span>
+                                    </button>
                                 </div>
-                                {% endif %}
-                                <!--Date Picker-->
-                                <div class="form-group mt-2">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <strong class="text-black">Date: <i class="far fa-calendar-alt"></i>
-                                                <input type="text" class="calendar form-control datepicker" name="booking_date"
-                                                    value="{{ item.booking_date }}" id="datepicker">
-                                            </strong>
-                                        </div>
-                                    </div>
+                            </div>
+                        </div>
+                        <!--Child Quantity-->
+                        {% if item.trip.family_friendly %}
+                        <div class="form-group mt-1">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <button class="decrease-quantity-child btn btn-sm"
+                                        data-item_id="{{ item.trip_id }}" id="decrement-qty_{{ item.trip_id }}">
+                                        <span>
+                                            <i class="fas fa-minus fa-sm"></i>
+                                        </span>
+                                    </button>
                                 </div>
-                            </form>
-                            <a class="update-link text-info"><small>Update</small></a>
-                            <a href="{% url 'remove_from_bag' item.trip.id %}"
-                                class="remove-item text-danger float-right">
-                                <small>Remove</small></a>
-                        </td>
-                        <td class="py-3">
-                        <!--Total Price-->
-                            <p class="my-0"><i class="fas fa-euro-sign"></i> {{ item.total_price }}</p>
-                            
-                        </td>
-                    </tr>
-                    {% endfor %}
-                    <!--Link to go back to the Products Page-->
-                    <tr>
-                        <td colspan="5" class="text-right">
-                            <a href="{% url 'trips' %}" class="btn btn-next btn-left">Keep Shopping</a>
-                            <a href="{% url 'trips' %}" class="btn btn-next btn-right">Check out</a>
-                        </td>
-                    </tr>
-                </table>
+                                <input class="form-control form-control-sm qty_input" type="number"
+                                    name="children_tickets" value="{{ item.children_tickets }}"
+                                    data-item_id="{{ item.trip_id }}" id="id_qty_{{ item.trip_id }}"
+                                    class="child-input">
+                                <div class="input-group-append">
+                                    <button class="add-quantity btn btn-sm" data-item_id="{{ item.trip_id }}"
+                                        id="increment-qty_{{ item.trip_id }}">
+                                        <span>
+                                            <i class="fas fa-plus fa-sm"></i>
+                                        </span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        {% endif %}
+                        <!--Date Picker-->
+                        <div class="form-group mt-2">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <h4>Booking Date: <i class="far fa-calendar-alt"></i>
+                                        <input type="text" class="calendar form-control datepicker" name="booking_date"
+                                            value="{{ item.booking_date }}" id="datepicker">
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    <a class="update-link btn"><small><i class="fas fa-sync"></i> Update</small></a>
+                    <a href="{% url 'remove_from_bag' item.trip.id %}"
+                        class="remove-item float-right btn">
+                        <small>Remove <i class="fas fa-trash"></i></small></a>
+                </div>
+                <div class="col-lg col-md">
+                    <div class="float-end">
+                        <h4>Sub Total</h4>
+                        <p><i class="fas fa-euro-sign"></i> {{ item.total_price }}</p> 
+                    </div>
+                </div>
+            </div>
+            <hr>
+            {% endfor %}
+            <div class="row">
+                <div class="col">
+                    <div class="float-end">
+                       <h4>Grand Total</h4>
+                       <p><i class="fas fa-euro-sign"></i> {{ total_price }}</p>
+                    </div>
+                </div>
             </div>
             {% else %}
             <!--else the message and the link to go back to the home page-->
