Updated a link to the shopping bag

--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -26,12 +26,16 @@
     </li>
     <!--access to the shopping bag-->
     <li class="list-inline-item nav-item">
-        <a class="text-primary text-white font-weight-bold nav-link d-block d-lg-none"
+        <a class="nav-link {% if total_price %} in-suitcase {% else %} text-white {% endif %} d-block d-lg-none"
             href="{% url 'bag' %}">
             <div class="text-center">
                 <div><i class="fas fa-suitcase-rolling fa-lg"></i></i></div>
                 <p class="my-0">
-                    $0.00
+                    {% if total_price %}
+                    <i class="fas fa-euro-sign"></i> {{ total_price|floatformat:2 }}
+                    {% else %}
+                    <i class="fas fa-euro-sign"></i> 0.00
+                    {% endif %}
                 </p>
             </div>
         </a>
