--- a/templates/base.html
+++ b/templates/base.html
@@ -146,7 +146,7 @@
 
     {% block postloadjs %}
     
-    <script type="text/javascript" src="{% static '/js/datepicker.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/datepicker.js' %}"></script>
 
     <script type="text/javascript">
             //Initiates the toasts and hides the contentent within 5 seconds
