--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -123,7 +123,7 @@
 
 {% block postloadjs %}
     {{ block.super }}  
-    <script src="{% static '/home/js/home-script.js' %}" type="text/javascript"></script>
+    <script src="{% static 'home/js/home-script.js' %}" type="text/javascript"></script>
 
 {% endblock %}
 
