Created basic templates, urls and views for user registration and login

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,8 +58,8 @@
                             <div><i class="fas fa-user fa-lg"></i></div>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Login</a></li>
-                            <li><a class="dropdown-item" href="#">Register</a></li>
+                            <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
+                            <li><a class="dropdown-item" href="{% url 'register' %}">Register</a></li>
                             <li><a class="dropdown-item" href="#">Profile</a></li>
                             <li><a class="dropdown-item" href="#">Logout</a></li>
                         </ul>
