--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -4,13 +4,15 @@
 {% block extra_title %} Register {% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <h2>Register</h2>
+<section class="main-content">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2>Register</h2>
+            </div>
         </div>
     </div>
-</div>
+</section>
 
 
 {% endblock %}
