--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,20 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block extra_title %} Register {% endblock %}
-
-{% block content %}
-<section class="main-content">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h2>Login</h2>
-            </div>
-        </div>
-        {% extends 'base.html' %}
-{% load static %}
-
-{% block extra_title %} Register {% endblock %}
+{% block extra_title %} Login {% endblock %}
 
 {% block content %}
 <section class="main-content">
